Failed loading render kernel when rendering Victor benchmark file #52470

Closed
opened 2017-08-20 21:05:17 +02:00 by bigbad · 6 comments

System Information
AMD 390X GPU, Intel i7-5280k

Blender Version
Broken: blender-2.79-07ca986-win64
Worked: Previous version

Short description of error

Victor.blend benchmark file gives this error report from system console.

Device init success
Compiling OpenCL program split
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program split build output: source\kernel/split/kernel_scene_intersect.h:86:30: error: passing 'PathState *' (aka 'struct PathState *') to parameter of type '__global PathState *' (aka '__global struct PathState *') changes address space of pointer
                lcg_state = lcg_state_init(&state, 0x51633e2d);
                                           ^~~~~~
source\kernel/kernel_random.h:309:65: note: passing argument to parameter 'state' here
ccl_device_inline uint lcg_state_init(ccl_addr_space PathState *state,
                                                                ^
1 error generated.

error: Clang front-end compilation failed!
Frontend phase failed compilation.
Error: Compiling CL to IR

Error: Failed loading render kernel, see console for errors

BMW benchmark file renders like normal.

**System Information** AMD 390X GPU, Intel i7-5280k **Blender Version** Broken: blender-2.79-07ca986-win64 Worked: Previous version **Short description of error** Victor.blend benchmark file gives this error report from system console. ``` Device init success Compiling OpenCL program split OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program split build output: source\kernel/split/kernel_scene_intersect.h:86:30: error: passing 'PathState *' (aka 'struct PathState *') to parameter of type '__global PathState *' (aka '__global struct PathState *') changes address space of pointer lcg_state = lcg_state_init(&state, 0x51633e2d); ^~~~~~ source\kernel/kernel_random.h:309:65: note: passing argument to parameter 'state' here ccl_device_inline uint lcg_state_init(ccl_addr_space PathState *state, ^ 1 error generated. error: Clang front-end compilation failed! Frontend phase failed compilation. Error: Compiling CL to IR Error: Failed loading render kernel, see console for errors ``` BMW benchmark file renders like normal.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bigbad

Added subscriber: @bigbad
Author

The problem is also in fishycat benchmark

The problem is also in fishycat benchmark
bigbad changed title from Failed loading render kernel when try rendering Victor.blend benchmark file to Failed loading render kernel when try rendering Victor benchmark file 2017-08-20 21:56:27 +02:00
bigbad changed title from Failed loading render kernel when try rendering Victor benchmark file to Failed loading render kernel when rendering Victor benchmark file 2017-08-20 21:56:58 +02:00

This issue was referenced by blender/cycles@16fda8c3b6

This issue was referenced by blender/cycles@16fda8c3b6fe9b9b6b9e740bc823dd67d34cebcc

This issue was referenced by 1d1ddd48db

This issue was referenced by 1d1ddd48db432eb9ff646297d559756668fe6843

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52470
No description provided.