Fix T52470: cycles OpenCL hair rendering not working after recent changes.